--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   color: white;
   padding: 10px;
   margin: 10px;
+  text-align: center;
 }
 
 .text-link {
@@ -20,9 +21,8 @@
   font-family: sans-serif;
   text-align: center;
 }
-
 body {
-  background: #0a0c16;
+  background: #0e101c;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -76,7 +76,7 @@ section > label {
 }
 
 input[type="submit"],
-.button {
+.button{
   position: relative;
   background: #ec5990;
   color: white;
@@ -125,13 +125,23 @@ input[type="submit"],
 }
 
 button[type="button"] {
-  padding: 5px;
-  background: #516391;
+  position: relative;
+  background: #ec5990;
   color: white;
-  letter-spacing: 0px;
-  text-transform: none;
-  padding: 10px;
-  letter-spacing: 1px;
+  text-transform: uppercase;
+  border: none;
+  font-weight: 600;
+  margin-top: 20px;
+  padding: 20px;
+  font-size: 16px;
+  letter-spacing: 2px;
+  display: block;
+  appearance: none;
+  border-radius: 4px;
+  width: 100%;
+  font-weight: 400;
+  letter-spacing: 0.5rem;
+  transition: 0.3s all;
 }
 
 input[type="submit"]:hover,
